codama-syn-helpers/tests-macros/tests/as_expr/from_verbatim.fail.stderr
error: expected a valid expression
 --> tests/as_expr/from_verbatim.fail.rs:3:11
  |
3 | #[as_expr([==> ??? <==])]
  |           ^^^^^^^^^^^^^
