codama-syn-helpers/tests-macros/tests/as_expr/from_verbatim.fail.rs
use codama_syn_helpers_test_macros::as_expr;

#[as_expr([==> ??? <==])]
pub struct Test;

fn main() {}
